--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
@@ -115,13 +115,13 @@
 	<table class="condition table_fixed">
 		<thead>
 	        <tr>
-	        	<th th:text="#{HQP_L_ORDER_SCALE_QTY}"></th><!-- Scale Quantity -->
-	            <th th:text="#{HQP_L_UOM}"></th><!-- UoM -->
-	            <th th:text="#{HQP_L_LIST_PRICE}"></th><!--List Price  -->                        
-	            <th th:text="#{HQP_L_STOCK_ORDER_NET_PRICE}"></th><!--Stock Order (Stock Order)  -->
+	        	<th th:text="#{HQP_L_ORDER_SCALE_QTY}" class="center"></th><!-- Scale Quantity -->
+	            <th th:text="#{HQP_L_UOM}" class="center"></th><!-- UoM -->
+	            <th th:text="#{HQP_L_LIST_PRICE}" class="center"></th><!--List Price  -->                        
+	            <th th:text="#{HQP_L_STOCK_ORDER_NET_PRICE}" class="center"></th><!--Stock Order (Stock Order)  -->
 	        </tr>
 	     </thead>
-	     <tbody class="scale-list"></tbody>        
+	     <tbody class="scale-list"></tbody>
 	</table>	
 </div>	
 <script>
