--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/view.html
@@ -99,14 +99,18 @@ $(function(){
 			{data: "MATNR_SO", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Parts No.
 			{data: "MATNR_SH", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Parts No.
 			{data: "MAKTX", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
-			{data: "LFIMG", title: "[[#{HQP_L_QTY}]]", className: "right"},//Qty
-			{data: "NETPR", title: "[[#{HQP_L_UNIT_PRICE}]]", className: "right"},//Unit Price
-			{data: "NETWR", title: "[[#{HQP_L_TOTAL_AMOUNT}]]", className: "right"},//Amount
+			{data: "LFIMG", title: "[[#{HQP_L_QTY}]]"},//Qty
+			{data: "NETPR", title: "[[#{HQP_L_UNIT_PRICE}]]"},//Unit Price
+			{data: "NETWR", title: "[[#{HQP_L_TOTAL_AMOUNT}]]"},//Amount
 			{data: "HERKL", title: "[[#{HQP_L_ORIGIN}]]"},//Origin
 			{data: "VBELN2", title: "[[#{HQP_L_SALES_DOC_NO}]]"},//Sales Doc. No.
 			{data: "ZFOBDT", title: "[[#{HQP_L_ONBOARD_DATE}]]"},//Onboard Date
-			{data: "KWERT", title: "[[#{HQP_L_FREIGHT_FEE}]]", className: "right"},//Freight Fee
+			{data: "KWERT", title: "[[#{HQP_L_FREIGHT_FEE}]]"},//Freight Fee
 			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"}//P.O. No.
+		],
+		columnDefs: [
+			{targets: [0, 1, 5, 8, 9, 10, 12], className: "dt-body-center"},
+			{targets: [6, 7, 11], className: "dt-body-right"}
 		],
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/delivery/view/data",
