--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/list.html
@@ -17,11 +17,11 @@
 		<table class="condition table-fixed">
 			<thead>
 		        <tr>
-		            <th th:text="#{HQP_L_ORDER_LIMIT}"></th>
-		            <th th:text="#{HQP_L_BALANCE}"></th>                        
-		            <th th:text="#{HQP_L_THIS_MONTH_DEPOSIT_AMT}"></th>
-		            <th th:text="#{HQP_L_ORDER_AMT_IN_PROGRESS}"></th>
-		            <th th:text="#{HQP_L_DISPOSABLE_SECURITY_AMT}"></th>
+		            <th th:text="#{HQP_L_ORDER_LIMIT}" class="center"></th>
+		            <th th:text="#{HQP_L_BALANCE}" class="center"></th>                        
+		            <th th:text="#{HQP_L_THIS_MONTH_DEPOSIT_AMT}" class="center"></th>
+		            <th th:text="#{HQP_L_ORDER_AMT_IN_PROGRESS}" class="center"></th>
+		            <th th:text="#{HQP_L_DISPOSABLE_SECURITY_AMT}" class="center"></th>
 		        </tr>
 		     </thead>
 		     <tbody>
@@ -61,12 +61,16 @@ $(function(){
 		columns : [
 			{data: "CRDAT", title: "[[#{HQP_L_PURCHASE_DATE}]]"},				
 			{data: "ENDAT", title: "[[#{HQP_L_PAYMENT_DUE_DATE}]]"},
-			{data: "TLAMT", title: "[[#{HQP_L_BILLING_AMT}]]", className: "right"},
-			{data: "RETAMT", title: "[[#{HQP_L_RETURN_AMT}]]", className: "right"},
-			{data: "CHAMT", title: "[[#{HQP_L_EXPECTED_PAYMENT_AMT}]]", className: "right"},
-			{data: "TOTAL", title: "[[#{HQP_L_DEPOSIT_AMT}]]", className: "right"},
-			{data: "ARREAR", title: "[[#{HQP_L_BALANCE}]]", className: "right"}
+			{data: "TLAMT", title: "[[#{HQP_L_BILLING_AMT}]]"},
+			{data: "RETAMT", title: "[[#{HQP_L_RETURN_AMT}]]"},
+			{data: "CHAMT", title: "[[#{HQP_L_EXPECTED_PAYMENT_AMT}]]"},
+			{data: "TOTAL", title: "[[#{HQP_L_DEPOSIT_AMT}]]"},
+			{data: "ARREAR", title: "[[#{HQP_L_BALANCE}]]"}
 		],
+		columnDefs: [
+			{targets: [0, 1], className: "dt-body-center"},
+			{targets: [2, 3, 4, 5, 6], className: "dt-body-right"}
+		],			
 		ajax: {
 			url: "[[${BASE_PATH}]]/accounts/ap/list/data",
 			data: function(p)
