--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
@@ -82,17 +82,22 @@ $(function(){
 		scrollY: 100,
 		//fixedColumns: {leftColumns: 3},
 		columns : [
-			{data: "VBELN", 		title: "[[#{HQP_L_CLAIM_NO}]]", className:"link"},//Claim No.
+			{data: "VBELN", 		title: "[[#{HQP_L_CLAIM_NO}]]"},//Claim No.
 			{data: "POSNR", 		title: "[[#{HQP_L_LINE_ITEM}]]"},// Line Item.
 			{data: "TEXT", 			title: "[[#{HQP_L_CLAIM_REASON}]]"},// Reason
 			{data: "ERDAT", 		title: "[[#{HQP_L_CLAIM_DOC_CREATE_DATE}]]"},// Doc. Date
-			{data: "VBELN2", 		title: "[[#{HQP_L_SALES_DOC_NO}]]", className: "link"},// Sales Doc. No.
-			{data: "T_NETWR", 		title: "[[#{HQP_L_TOTAL_AMOUNT}]]", className: "right"},// Total Amount
+			{data: "VBELN2", 		title: "[[#{HQP_L_SALES_DOC_NO}]]"},// Sales Doc. No.
+			{data: "T_NETWR", 		title: "[[#{HQP_L_TOTAL_AMOUNT}]]"},// Total Amount
 			{data: "WAERK", 		title: "[[#{HQP_L_CURR}]]"},// Curr.
 			{data: "RFGSK_TX_T", 	title: "[[#{HQP_L_PROCESS_RESULT}]]"},// Process Result						
 			{data: "RFGSK_TX_T1", 	title: "[[#{HQP_L_RETURN_RESULT}]]"},// Return Status			
 			{data: "VBELN3", 		title: "[[#{HQP_L_FINAL_DOC}]]"}// Final Document		
 		],
+		columnDefs: [
+			{targets: [0, 4], className: "link dt-body-center"},
+			{targets: [1, 3, 6, 9], className: "dt-body-center"},
+			{targets: [5], className: "dt-body-right"}
+		],		
 		ajax: {
 			url: "[[${BASE_PATH}]]/claim/list/data",
 			data: function(p)
