--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
@@ -114,20 +114,20 @@ $(function(){
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
 		columns : [
-			{data: "VBELN", title: "[[#{HQP_L_INQUIRY_NO}]]", className: "link"},//Inuqiry No.
+			{data: "VBELN", title: "[[#{HQP_L_INQUIRY_NO}]]"},//Inuqiry No.
 			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.
-			{data: "VBELN2", title: "[[#{HQP_L_INQUIRY_TO_ORDER_NO}]]", className: "link"},//Sales Doc. No.
+			{data: "VBELN2", title: "[[#{HQP_L_INQUIRY_TO_ORDER_NO}]]"},//Sales Doc. No.
 			{data: "ERDAT2", title: "[[#{HQP_L_INQUIRY_DATE}]]"},//Create Date
-			{data: "COUNT", title: "[[#{HQP_L_ORDER_ITEM_ROWS}]]", className: "right"},//Line Item
-			{data: "T_NETWR", title: "[[#{HQP_L_ORDER_AMOUNT}]]", className: "right"},//Order Amt.
+			{data: "COUNT", title: "[[#{HQP_L_ORDER_ITEM_ROWS}]]"},//Line Item
+			{data: "T_NETWR", title: "[[#{HQP_L_ORDER_AMOUNT}]]"},//Order Amt.
 			{data: "WAERK", title: "[[#{HQP_L_CURR}]]"},//Curr.
 			{data: "RFGSK_TX", title: "[[#{	HQP_L_STATUS}]]"}//Open Status
 		],
-		/*
 		columnDefs: [
-			{className: "right", targets: [5]}
+			{targets: [0, 2], className: "link dt-body-center"},
+			{targets: [2, 3, 4, 6, 7], className: "dt-body-center"},
+			{targets: 5, className: "dt-body-right"},
 		],
-		*/
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/display/inquiry/list/data",
 			data: function(p)
@@ -219,7 +219,7 @@ $(function(){
 	$("#TBL_grid tbody").on("click", "td:nth-child(3)", function () {
 		let orderNo = $tableObj.row($(this)).data().VBELN2;		
 		
-		Popup.open("[[${BASE_PATH}]]/order/display/order/popup/view?orderNo=" + orderNo + "&pOrderNo=" + orderNo, 1280, 720);
+		Popup.open("[[${BASE_PATH}]]/order/display/order/popup/view1?orderNo=" + orderNo + "&pOrderNo=" + orderNo, 1280, 720);
 	});		
 });
 </script>	
