--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
@@ -96,20 +96,20 @@ $(function(){
 		ordering: true,// 정렬 기능 켬
 		scrollY: 100,
 		columns : [
-			{data: "VBELN", title: "[[#{HQP_L_ORDER_NO}]]", className: "link"},//Order No.
+			{data: "VBELN", title: "[[#{HQP_L_ORDER_NO}]]"},//Order No.
 			{data: "ZZAUKON", title: "[[#{HQP_L_ORDER_TYPE}]]"},//Order Type
 			{data: "VTEXT2", title: "[[#{HQP_L_SHIPPING_CONDITION}]]"},//Shipping Condition
 			{data: "BSTKD", title: "[[#{HQP_L_PO_NO}]]"},//P.O. No.
 			{data: "ERDAT2", title: "[[#{HQP_L_ORDER_DATE}]]"},//Create Date
-			{data: "COUNT", title: "[[#{HQP_L_ORDER_ITEM_ROWS}]]", className: "right"},//Item Rows
-			{data: "T_NETWR", title: "[[#{HQP_L_ORDER_AMOUNT}]]", className: "right"},//Order Amt.
+			{data: "COUNT", title: "[[#{HQP_L_ORDER_ITEM_ROWS}]]"},//Item Rows
+			{data: "T_NETWR", title: "[[#{HQP_L_ORDER_AMOUNT}]]"},//Order Amt.
 			{data: "WAERK", title: "[[#{HQP_L_CURR}]]"}//Curr.
 		],
-		/*
 		columnDefs: [
-			{className: "left", targets: "_all"}
+			{targets: 0, className: "link dt-body-center"},
+			{targets: [3, 4, 5, 7], className: "dt-body-center"},
+			{targets: 6, className: "dt-body-right"},
 		],
-		*/
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/display/order/list/data",
 			data: function(p)
