--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/quot/view.html
@@ -21,7 +21,7 @@
 		<tbody>
 			<tr>
 				<th th:text="#{HQP_L_ORDER_TYPE}"></th><!-- Order Type -->
-				<td id="KONDA_TEXT"></td>
+				<td id="KONDA_TEXT" class="wp15"></td>
 				<th th:text="#{HQP_L_SHIP_TO_PARTY}"></th><!-- Ship To Party -->
 				<td id="KUNAG_NAME"></td>
 			</tr>
@@ -88,7 +88,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<form id="FORM_search" name="FORM_search" action="[[${BASE_PATH}]]/order/display/quot/list">
+	<form id="FORM_search" name="FORM_search" th:action="|${BASE_PATH}/order/display/quot/list|">
 		<input type="hidden" name="pDocType" th:value="${pDocType}">
 		<input type="hidden" name="pOrderType" th:value="${pOrderType}">
 		<input type="hidden" name="pOrderNo" th:value="${pOrderNo}">
@@ -154,12 +154,16 @@ $(function(){
 	    			{data: "MATERIAL_ENT", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Order Part No.
 	    			{data: "MATERIAL", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Part No
 	    			{data: "MATERIAL_TEXT", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
-	    			{data: "REQ_QTY", title: "[[#{HQP_L_REQ_QTY}]]", className: "right"},//Req Qty
-	    			{data: "KBETR", title: "[[#{HQP_L_LIST_PRICE}]]", className: "right"},//List Price
-	    			{data: "NET_PRICE", title: "[[#{HQP_L_NET_PRICE}]]", className: "right"},//Net price
-	    			{data: "NET_VALUE", title: "[[#{HQP_L_NET_VALUE}]]", className: "right"},//Net value
+	    			{data: "REQ_QTY", title: "[[#{HQP_L_REQ_QTY}]]"},//Req Qty
+	    			{data: "KBETR", title: "[[#{HQP_L_LIST_PRICE}]]"},//List Price
+	    			{data: "NET_PRICE", title: "[[#{HQP_L_NET_PRICE}]]"},//Net price
+	    			{data: "NET_VALUE", title: "[[#{HQP_L_NET_VALUE}]]"},//Net value
 	    			{data: "AVAILABILITY", title: "[[#{HQP_L_AVAILABILITY}]]"}//Available
 	    		],
+	    		columnDefs: [
+	    			{targets: [0, 1, 5, 9], className: "dt-body-center"},
+	    			{targets: [6, 7, 8], className: "dt-body-right"},
+	    		],	    		
 	    		data: item,
 	    		initComplete: function() {
 	    			ProgressBar.hide();
@@ -173,15 +177,15 @@ $(function(){
 });
 
 $("#BTN_pdfDownload").on("click", function() {
-	document.location.href = "[[${BASE_PATH}]]/order/display/pdf_download?orderNo=[[${orderNo}]]&mode=BT08";
-});	
+	document.location.href = "[[${BASE_PATH}]]/order/display/order/download/confirm_sheet?orderNo=[[${orderNo}]]&mode=BT06";
+});
 
 $("#BTN_back").on("click", function() {
 	$("#FORM_search").submit();
 });
 
 $("#BTN_transfer").on("click", function() {
-	Popup.open("[[${BASE_PATH}]]/order/create/transfer_to_order", 500, 200);
+	Popup.open("[[${BASE_PATH}]]/order/create/popup/transfer_to_order", 500, 200);
 });
 
 $("#BTN_download").on("click", function() {
