--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
@@ -29,7 +29,7 @@
 <div class="split-row"></div><div class="split-row"></div>
 
 <!-- Logout -->
-<form id="FORM_logout" method="post" th:action="@{${T(org.jwebppy.portal.common.PortalConfigVo).FORM_LOGOUT_PROCESSING_URL}}" style="display:none;"></form>
+<form id="FORM_logout" method="post" th:action="@{${T(org.jwebppy.portal.common.PortalConfigVo).FORM_LOGOUT_PROCESSING_URL}}"></form>
 
 <script>
 $(document).ready(function() {
