--- a/jwebppy/src/main/resources/templates/portal/iv/mgmt/account/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/mgmt/account/list.html
@@ -43,12 +43,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-<script type="application/javascript">
-
-//화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
-//컬럼 width 자동. scroller 자동.
-//고정된 맵 데이터 사용. 페이지 생성시 데이터 넘겨서 그리드 만드는 방식
-
+<script>
 $(function(){
 
 	$tableObj = $("#TBL_grid").DataTable({
@@ -88,7 +83,7 @@ $(function(){
 				p.pDealerCode = $("#pDealerCode").val();
 			},
 			dataSrc: function(response)
-			{				
+			{
 				return response.RESULT;
 			}
 		},
