--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/view.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/view.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		<div class="seven wide column">
-			<div id="AREA_createItem">
+			<div id="AREA_createItem" style="position: sticky; top: 0px;">
 				<div class="ui dividing header">Attributes</div>
 				<div id="TAB_viewItem" class="ui secondary pointing menu">
 					<a class="item active wrap" data-tab="general">General</a>
