--- a/jwebppy/src/main/resources/static/portal/css/basic.css
+++ b/jwebppy/src/main/resources/static/portal/css/basic.css
@@ -70,8 +70,8 @@ html, body {
 	background: #ffffff;
 	display: flex;
 	flex-flow: column;
-	min-width: 1300px;
 	overflow-x: auto;
+	min-width: 1300px;
 }
 
 button {
@@ -162,105 +162,6 @@ input {
 }
 .logout-button:hover {
 	background: #f8fffd;
-}
-
-/*--- 메인메뉴 ------------------*/
-.gmb-wrap {
-	 width: 100%;
-	 height: 50px;
-	 margin: 0 auto;
-	 padding: 0;
-}
-.gmb-area {
-	width: 100%;
-	position: fixed;
-	z-index: 20;
-}
-.gmb-menu-area {
-	/*display: inline-block;*/
-	overflow-y: hidden;
-	margin: 0 40px 0 40px;
-	padding: 0;
-	/*position: fixed;*/
-	background: #003081;
-	width: auto;
-	height: 50px;
-	text-align: center;
-	border-radius: 5px;
-	background: rgba(0, 48, 130, 0.8);
-}
-.gmb-menu-list {
-	overflow-y: hidden;
-	white-space: nowrap;
-	line-height: 50px;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	background-color : #003082;
-}
-
-.gmb-menu-list li{
-	width: 11%;
-	color: #fff;
-	font-size: 16px;
-	font-weight: bold;
-	display: inline-table;
-	cursor: pointer;	
-}
-
-.gmb-menu-list li:hover{
-	background: #7887b1;
-}
-
-.mainmenu-arrowbutton {
-	width:32px;
-	height:32px;
-	vertical-align:middle;	
-}
-
-/*--- 서브메뉴 ------------------*/
-.mainmenu-sub-area {
-	backdrop-filter: blur(6px);
-	overflow-y: hidden;
-	/* position: fixed; */
-	top: 0px;
- 	background: rgba(0, 48, 129, 0.80);
-	height: 40px;	
-	width: auto;
- 	/*width: -webkit-fill-available;*/
-	text-align: center;
-	padding: 0;
-	border-radius: 5px;
-	margin: 0 40px 0 40px;
-}
-.gmb-menu-sub-list {
-	overflow-y: hidden;
-	white-space: nowrap;
-	line-height: 40px;
-	width: 100%;
-	margin: 0;
-	display: inline-block;
-	padding: 0;
-}
-
-.gmb-menu-sub-list li{
-	width: 11%;
-	font-size: 14px;
-	font-weight: normal;
-	display: inline-table;
-	cursor: pointer;
-	line-height: 2;
-	color: #b2e4d7;	
-}
-
-.gmb-menu-sub-list li:hover{
-	text-decoration: underline;
-	color: #fff;
-}
-
-.gmb-menu-sub-list li:hover{
-	/*background: #7887b1;*/
 }
 
 /*--- 여백 과 flex ------------------*/
@@ -661,7 +562,7 @@ input.custom-ui[type="radio"]:disabled + label:before {
   transition-duration: 0;
   filter: brightness(1);
 }
-input.custom-ui[type="text"]{
+input.custom-ui[type="text"], input.custom-ui[type="number"]{
 	padding-left: 6px;
 	padding-right: 6px;
 	border: 1px solid #ddd;
@@ -672,7 +573,7 @@ input.custom-ui[type="text"]{
 input.custom-ui[type="text"].uppercase{
 	text-transform: uppercase; 
 }
-input.custom-ui[type="text"]:read-only{
+input.custom-ui[type="text"]:read-only, input.custom-ui[type="number"]:read-only{
 	background-color: #cccccc;
 }
 input.custom-ui[type="password"]{
