--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -703,15 +703,12 @@
 		doSimulation();
 	});
 	
-	//화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
-	//컬럼 width 자동. scroller 자동.
-	//고정된 맵 데이터 사용. 페이지 생성시 데이터 넘겨서 그리드 만드는 방식
 	$(function(){
 		let tabIndex = 1;
 	
 		$tableObj = $("#TBL_grid").DataTable({
 			select: {
-				selector: "td:not(.noselect)"	// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
+				selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
 		    },
 			ordering: true,
 			scrollY: 100,
@@ -719,7 +716,6 @@
 			columns: [
 				{// 컬럼에 checkbox 설정
 					name: "chk",
-					className:"center noselect skip-download",// row selection 기능 막음.
 					orderable: false,// checkbox 는 정렬 불가
 					title:"<input type='checkbox' class='custom-ui check-all' onchange='syncInput(this)' onclick='allChecked(this)'><label></label>",
 					render: function(data, type, row)
@@ -740,10 +736,9 @@
 					title: "[[#{HQP_L_ORDER_PART_NO}]]",				
 					width: 200,
 					orderable: false,
-					className:"center noselect",
 					render: function(data, type, row)
 					{
-						return '<button class="btn-popup" type="button"></button><input type="text" name="materialNo" class="custom-ui" value="' + row.materialNo + '" tabindex="' + tabIndex++ + '" ' + row.disabled + ' onchange="syncInput(this)">';// FixedColumns 사용시엔 syncInput 호출 필요함.
+						return "<button class='btn-popup' type='button'></button><input type='text' name='materialNo' class='custom-ui' value='" + row.materialNo + "' tabindex='" + tabIndex++ + "' " + row.disabled + " onchange='syncInput(this)'>";// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},
 				{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQP_L_SUPPLY_PART_NO}]]", width: 200},//Supply Part No
@@ -753,10 +748,9 @@
 					data: "orderQty",
 					title: "[[#{HQP_L_REQ_QTY}]]",
 					orderable: false,
-					className: "center noselect",
 					render: function(data, type, row)
 					{
-						return '<input type="text" class="custom-ui" name="orderQty" style="width:70px" value="' + row.orderQty + '" tabindex="' + tabIndex++ + '" ' + row.disabled + ' onkeyup="doSimulationByEnter(this)" onchange="syncInput(this)">';// FixedColumns 사용시엔 syncInput 호출 필요함.
+						return "<input type='number' class='custom-ui' name='orderQty' style='width:70px' min='1' value='" + row.orderQty + "' tabindex='" + tabIndex++ + "' " + row.disabled + " onkeyup='doSimulationByEnter(this)' onchange='syncInput(this)'>";// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},//Req Qty
 				{name: "lotQty", data: "lotQty", title: "[[#{HQP_L_SALES_LOT}]]"},//Sales Lot
@@ -767,6 +761,11 @@
 				{name: "netValue", data: "netValue", title: "[[#{HQP_L_NET_VALUE}]]"},//Net Value
 				{name: "availability", data: "availability", title: "[[#{HQP_L_AVAILABILITY}]]"},//Availability
 			],
+			columnDefs: [
+				{targets: [0], className: "skip-download dt-body-center"},
+				{targets: [1, 5, 6, 7, 8, 12], className: "dt-body-center"},
+				{targets: [10, 11], className: "dt-body-right"}
+			],				
 			ajax: {
 				url: "[[${BASE_PATH}]]/order/create/simulation",
 				type: "POST",
@@ -873,6 +872,9 @@
 				}				
 			}			
 		});
+
+		// Datatable grid 초기 설정 셋업
+		initGridTable($tableObj);		
 		
 		function reload()
 		{
@@ -880,16 +882,10 @@
 			$tableObj.ajax.reload();
 		};		
 		
-		// Datatable grid 초기 설정 셋업
-		initGridTable($tableObj);
-		
 		// Datatable onload event
 		$("#TBL_grid").on("draw.dt", function () {
 			$("#fileName").val("");
 			$("#simulationFrom").val("");
-			
-			// Datatable grid 초기 설정 셋업
-			//initGridTable($tableObj, true);
 			
 			$("#AREA_grid .btn-popup").on("click", function(event) {
 				_showPartSearch($(this).siblings("input[name=materialNo]").val());
