--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/css.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/css.html
@@ -7,7 +7,7 @@
 <!-- custom css -->
 <link rel="stylesheet" type="text/css" th:href="@{/portal/css/basic.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.custom.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/portal/css/gmb.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/portal/css/gnb.css}">
 
 <!-- link rel="stylesheet" type="text/css" th:href="@{/portal/js/jquery-ui/jquery-ui.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/portal/js/datatables/datatables.min.css}" />
