--- a/jwebppy/src/main/resources/static/portal/css/gnb.css
+++ b/jwebppy/src/main/resources/static/portal/css/gnb.css
@@ -1,17 +1,17 @@
 /*--- 메인메뉴 ------------------*/
-.gmb-wrap {
+.gnb-wrap {
 	 width: 100%;
 	 height: 50px;
 	 margin: 0 auto;
 	 padding: 0;
 }
-.gmb-container {
+.gnb-container {
 	width: 100%;
 	top: 0px;
 	z-index: 20;
 	min-width: 1300px;
 }
-.gmb-menu-area {
+.gnb-menu-area {
 	/*display: inline-block;*/
 	overflow-y: hidden;
 	margin: 0 40px 0 40px;
@@ -25,7 +25,7 @@
 	position: relative;
 	z-index: 9999;
 }
-.gmb-menu-list {
+.gnb-menu-list {
 	overflow-y: hidden;
 	white-space: nowrap;
 	line-height: 50px;
@@ -36,7 +36,7 @@
 	background-color : #003082;
 }
 
-.gmb-menu-list li{
+.gnb-menu-list li{
 	width: 11%;
 	color: #fff;
 	font-size: 16px;
@@ -44,7 +44,7 @@
 	display: inline-table;
 	cursor: pointer;	
 }
-.gmb-menu-list li:hover{
+.gnb-menu-list li:hover{
 	background: #7887b1;
 }
 .mainmenu-arrowbutton {
@@ -54,7 +54,7 @@
 }
 
 /*--- 서브메뉴 ------------------*/
-.gmb-menu-sub-list {
+.gnb-menu-sub-list {
 	overflow-y: hidden;
 	white-space: nowrap;
 	line-height: 40px;
@@ -63,7 +63,7 @@
 	display: inline-block;
 	padding: 0;
 }
-.gmb-menu-sub-list li{
+.gnb-menu-sub-list li{
 	width: 11%;
 	font-size: 14px;
 	font-weight: normal;
@@ -72,11 +72,11 @@
 	line-height: 2;
 	color: #b2e4d7;
 }
-.gmb-menu-sub-list li:hover{
+.gnb-menu-sub-list li:hover{
 	text-decoration: underline;
 	color: #fff;
 }
-.gmb-menu-sub-list li:hover{
+.gnb-menu-sub-list li:hover{
 	/*background: #7887b1;*/
 }
 .mainmenu-sub-list li:hover{
