--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
@@ -10,7 +10,7 @@ function makeGmb()
 	let menu = [];
 
 	JpUtilsAjax.get({
-		url: "/platform/mgmt/gmb/menu",
+		url: "/platform/mgmt/gnb/menu",
 		success: function(data, textStatus, jqXHR)
 		{
 			menu.push("<div class='header item'>");
@@ -33,9 +33,9 @@ function makeGmb()
 		    menu.push("<div class='ui dropdown item right inverted user settings'>");
 		    menu.push("<i class='cog icon'></i>");
 		    menu.push("<div class='menu'>");
-		    menu.push("<div class='item'><i class='user icon'></i> Username : <span id='gmbUsername'></span></div>");
+		    menu.push("<div class='item'><i class='user icon'></i> Username : <span id='gnbUsername'></span></div>");
 		    menu.push("<div class='divider'></div>");
-		    menu.push("<div class='item'><i class='history icon'></i> Last Login Time / IP : <span id='gmbLastLoginTime'></span></div>");
+		    menu.push("<div class='item'><i class='history icon'></i> Last Login Time / IP : <span id='gnbLastLoginTime'></span></div>");
 		    menu.push("<div class='divider'></div>");
 		    menu.push("<a class='item' href='javascript:logout();'><i class='power off icon'></i> Log Off</a>");
 		    menu.push("</div>");
@@ -101,11 +101,11 @@ function makeGmb()
 			    	
 			    	if (data != null)
 			    	{
-			    		$("#gmbUsername").html(data.username);
+			    		$("#gnbUsername").html(data.username);
 			    		
 			    		if (JpUtilsString.isNotEmpty(data.displayZonedRegDate))
 			    		{
-			    			$("#gmbLastLoginTime").html(data.displayZonedRegDate + ", " + data.timezone + " / " + data.ip);
+			    			$("#gnbLastLoginTime").html(data.displayZonedRegDate + ", " + data.timezone + " / " + data.ip);
 			    		};
 			    	};
 			    }	
