--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -10,7 +10,7 @@
 	<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/meta"></th:block>
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/main.css}">
-	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/gmb.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/gnb.css}">
 	
 	<!-- JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -26,7 +26,7 @@
 	<script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
 	<script th:src="@{/portal/js/jWebppy.ui.popup.js}"></script>
 	<script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
-	<script th:src="@{/portal/js/portal.ui.gmb.js}"></script>
+	<script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
 </head>
 <body>
 	<!-- Progress bar end -->
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 			<!-- header.jsp begin -->
-			<div class="gmb-area">
+			<div class="gnb-area">
 				<div class="header">
 					<div class="logo-area">
 						<img class="logo-doosan" th:src="@{/portal/img/main/logo2.png}" /><img class="logo-doobizplus" th:src="@{/portal/img/doobizplus.png}" alt="DOOBIZ Plus" />
@@ -65,11 +65,11 @@
 						<button class="logout-button" type="button" th:text="#{PTL_B_LOGOUT}"></button>
 					</div>
 				</div>
-				<div class="gmb-wrap">
-					<div class="gmb-container">
-						<div class="gmb-menu-area">
-							<ul class="gmb-menu-list" style="display:none;"></ul>					
-							<ul class="gmb-menu-sub-list"></ul>
+				<div class="gnb-wrap">
+					<div class="gnb-container">
+						<div class="gnb-menu-area">
+							<ul class="gnb-menu-list" style="display:none;"></ul>					
+							<ul class="gnb-menu-sub-list"></ul>
 						</div>
 					</div>
 				</div>				
