--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
@@ -26,4 +26,4 @@
 <script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
 <script th:src="@{/portal/js/portal.utils.order.js}"></script>
 <script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
-<script th:src="@{/portal/js/portal.ui.gmb.js}"></script>
+<script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
