--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/top.html
@@ -17,11 +17,11 @@
 	</div>
 </div>
 
-<div class="gmb-wrap">
-	<div class="gmb-container">
-		<div class="gmb-menu-area">
-			<ul class="gmb-menu-list" style="display:none;"></ul>					
-			<ul class="gmb-menu-sub-list"></ul>
+<div class="gnb-wrap">
+	<div class="gnb-container">
+		<div class="gnb-menu-area">
+			<ul class="gnb-menu-list" style="display:none;"></ul>					
+			<ul class="gnb-menu-sub-list"></ul>
 		</div>
 	</div>
 </div>
